<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Racing Drama</string>
    <string name="settings">Settings</string>
    <string name="bike_style_settings">Bike Style Settings</string>
    <string name="select_bike_style">Select Bike Style:</string>
    <string name="style_classic">Classic (Default)</string>
    <string name="style_sport">Sport</string>
    <string name="style_retro">Retro</string>
    <string name="save">Save</string>
    <string name="back_to_game">Back to Game</string>
    <string name="settings_saved">Settings saved!</string>
</resources> 